# alffplay

./: CMakeLists.txt
examples/: alffplay.cpp
examples/common/: alhelpers.h  alnumeric.h
